# micro-connector

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  prompt.txt  record-serial.sh  tests.json  testsold.json
.github/workflows/: publish-docker-image.yml
e2e-testing/: tests.json
e2e-testing/src/: main.rs  structs.rs
hil-processor/: Cargo.toml
hil-processor-wasm/: Cargo.toml  LICENSE_MIT  test.js  test.sh
hil-processor-wasm/src/: lib.rs
hil-processor/src/: lib.rs  snapshot.rs  structs.rs
src/: adapter.rs  api.rs  bluetooth.rs  handler.rs  http.rs  log_subscriber.rs  main.rs  mdns.rs  socket.rs  structs.rs  updater.rs  watchers.rs
src/e2e/: library.rs  main.rs  structs.rs
src/github/: mod.rs  structs.rs
src/socket/: api.rs  mod.rs  structs.rs
test-api/: Dockerfile  index.js
unix-utils/: Cargo.toml
unix-utils/src/: lib.rs  request.rs  response.rs
