[package]
name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "e2e"
path = "src/e2e/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.5", features = ["ws", "query"] }
btleplug = "0.11.8"
chrono = "0.4.42"
dotenvy = "0.15.7"
local-ip-address = "0.6.5"
mdns-sd = "0.15.1"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
uuid = "1.18.1"
rand = "0.9.2"
unix-utils = { path = "./unix-utils" }
crc32fast = "1.5.0"
base64 = "0.22.1"
unidecode = "0.3.0"
hil-processor = { path = "./hil-processor" }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
rustls = { version = "0.23.32", features = ["ring"], default-features = false }
rcgen = "0.14.5"
rustls-pemfile = "2.2.0"
aes = "0.8.4"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { version = "0.9.9", features = ["vendored"] }
