[package]
name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "e2e"
path = "src/e2e/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["ws", "query"] }
btleplug = "0.11.8"
chrono = "0.4.43"
dotenvy = "0.15.7"
local-ip-address = "0.6.10"
mdns-sd = "0.18.0"
reqwest = { version = "0.13.2", features = ["json", "rustls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
uuid = { version = "1.21.0", features= ["serde"] }
rand = "0.10.0"
unix-utils = { path = "./unix-utils" }
crc32fast = "1.5.0"
base64 = "0.22.1"
unidecode = "0.3.0"
hil-processor = { path = "./hil-processor" }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
rustls = { version = "0.23.36", features = ["ring"], default-features = false }
rcgen = "0.14.7"
rustls-pemfile = "2.2.0"
aes = "0.8.4"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { version = "0.9.10", features = ["vendored"] }
