[package]
name = "hil-processor-wasm"
version = "0.1.2"
authors = ["filipton <filipton12@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.104"
hil-processor = { path = "../hil-processor" }
unix-utils = { path = "../unix-utils" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.81"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.54"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
